# taskmanager

./: .gitignore  CMakeLists.txt  Registry.h  start_cmake.sh
cmake/: setup.cmake  setupQT.cmake
dependencies/: CMakeLists.txt
sources/: CMakeLists.txt
sources/main/: CMakeLists.txt  main.cpp
sources/qt_ui/: CMakeLists.txt  HierarchyTaskList.cpp  HierarchyTaskList.h  HierarchyTaskListModel.cpp  HierarchyTaskListModel.h  LineEditDialog.cpp  LineEditDialog.h  MainWindow.cpp  MainWindow.h  ProjectListModel.cpp  ProjectListModel.h  ProjectManager.cpp  ProjectManager.h  TaskNoteEditor.cpp  TaskNoteEditor.h
sources/qt_ui/tests/: CMakeLists.txt  UiTest.cpp  UiTest.h  main.cpp
sources/tasks_core/: CMakeLists.txt  CoreExeptions.h  DataStore.cpp  DataStore.h  Project.cpp  Project.h  Task.cpp  Task.h
sources/tasks_core/tests/: CMakeLists.txt  ProjectTests.cpp  TaskTests.cpp  main.cpp
